Allow expansion of sidenav on small screens. Fix collapsed sidenav scroll issue. (#6218)
(cherry picked from commit fda7c11efba4ded0f1467be6be27ac6ee29aed57)

--- a/modules/web/src/app/core/components/sidenav/style.scss
+++ b/modules/web/src/app/core/components/sidenav/style.scss
@@ -22,8 +22,16 @@
   overflow-y: auto;
   padding-top: variables.$content-padding;
 
+  .sidenav-inner-container {
+    height: 100%;
+  }
+
   &.collapse-sidenav {
     @include mixins.size(variables.$sidenav-width-collapsed, 100%);
+
+    .sidenav-inner-container {
+      @include mixins.size(variables.$sidenav-inner-container-width-collapsed, 100%);
+    }
   }
 
   .menu-item {
